kustomize/dataplane/choreo-observability/obsapi/obsapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checkov.io/skip1: CKV_K8S_38=The SA token is required for the linkerd to define service identity
  labels:
    choreo.component: obsapi
  name: obsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: obsapi
  template:
    metadata:
      labels:
        choreo.component: obsapi
        antiaffinity: obsapi
      annotations:
        linkerd.io/inject: enabled
        config.alpha.linkerd.io/proxy-wait-before-exit-seconds: "60"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - envFrom:
            - configMapRef:
                name: cm-obsapi
            - configMapRef:
                name: env-obsapi
            - secretRef:
                name: secret-obsapi
          image: choreocontrolplane.azurecr.io/choreoipaas/observability-api-dp:latest
          securityContext:
            runAsUser: 10500
            runAsGroup: 10500
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          name: obsapi
          ports:
            - containerPort: 9095
              name: obsapi-port
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 15
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              port: obsapi-port
              path: /readiness
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 15
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              port: obsapi-port
              path: /liveness
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /mnt/csi/secret-obsapi
              name: secret-obsapi
              readOnly: true
      volumes:
        - name: secret-obsapi
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: secret-obsapi
            nodePublishSecretRef:
              name: csi-secret-store-azure
      serviceAccountName: sa-choreo-default
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: antiaffinity
                    operator: In
                    values:
                      - obsapi
              topologyKey: kubernetes.io/hostname
