kustomize/dataplane/choreo-observability/obsapi/obsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: choreo-obsapi
  name: choreo-obsapi
spec:
  ports:
    - name: obsapi-port
      port: 9095
      targetPort: obsapi-port
  selector:
    choreo.component: obsapi
